objects/AIA_FACET_Group__c.object
<CustomObject>
    <fields>
        <fullName>Effective_New_Date__c</fullName>
        <description>Effective date on package  = Effective date on BRF (if request type = new/prospect)
Effective date on package  =*manual* (if request type = other than new/prospect)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retiree</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FACETS_Group_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FACETS Group Number Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Request_Form_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Group_Structure_Request_Form__c</field>
                <operation>equals</operation>
                <valueField>AIA_Group_Structure_Form_Product__c.Group_Structure_Request_Form__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AIA_Group_Structure_Form_Product__c</referenceTo>
        <relationshipLabel>FACETS Groups</relationshipLabel>
        <relationshipName>FACET_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Structure Request Form</label>
        <referenceTo>AIA_Group_Structure_Request_Form__c</referenceTo>
        <relationshipName>FACET_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Description_List__c</fullName>
        <label>Product Description</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Dental/Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Group_Structure_Request_Form_Product__r.Proposed_Products__r.Plan_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TERM_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <label>FACETS Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>FACETS Group Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FACETS Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FG001_Termination_Date</fullName>
        <active>true</active>
        <description>When Request Type of related GSRF is "Prospect/New", the Term Date must be blank.</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; AND( ISPICKVAL(Group_Structure_Request_Form__r.Implementation__r.Benefit_Request_Form__r.Request_Type__c, 'Prospect/New') , NOT( ISBLANK( TERM_Date__c) ) )</errorConditionFormula>
        <errorDisplayField>TERM_Date__c</errorDisplayField>
        <errorMessage>Termination date not valid for Request Type Prospect/New</errorMessage>
    </validationRules>
</CustomObject>